# pdf-compressor-rust

./: README.md  compress_pdf.py  pdf_compressor_wasm_placeholder.rs
.github/workflows/: wasm-release.yml
pdf-compressor-rust/: Cargo.toml
pdf-compressor-rust/src/: lib.rs  main.rs
