[package]
name = "pdf-compressor-rust"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lopdf = "0.34"
image = "0.25.1"
anyhow = "1.0"
flate2 = "1.0"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
linked-hash-map = "0.5" # lopdf uses this
lazy_static = "1.4"
tempfile = "3.10"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3" # Optional, might need for some JS interop
web-sys = { version = "0.3", features = ["console"] } # For logging to console

